--- a/style.css
+++ b/style.css
@@ -39,26 +39,63 @@ body {
     background: url('empty.png') no-repeat center;
     background-size: cover;
     cursor: pointer;
+    position: relative;
+}
+
+.plant {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .inventory {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: none;
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
     padding: 10px;
+    border-radius: 5px;
+    width: 80%;
+    text-align: left;
 }
 
-.seed-icon {
-    width: 30px;
-    height: 30px;
+#closeInventory {
+    float: right;
+    background: red;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.inventory-item {
+    cursor: pointer;
+    padding: 5px;
+    transition: background 0.3s;
+}
+
+.inventory-item:hover {
+    background: rgba(0, 0, 0, 0.1);
+}
+
+.inventory-item.selected {
+    background: rgba(0, 128, 0, 0.5);
+}
+
+.seed-icon, .water-icon, .harvest-icon {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
     margin-right: 5px;
 }
 
-button {
-    background: #5C9649;
-    color: white;
-    border: none;
-    padding: 10px;
-    font-size: 16px;
+#toggleInventory {
+    margin-top: 10px;
+    padding: 5px 10px;
     cursor: pointer;
 }
